--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=SpringAi
 spring.ai.openai.api-key=${OPENAI_API_KEY}
 spring.ai.openai.api-url=https://api.openai.com
 spring.ai.openai.chat.model=gpt-3.5-turbo
+spring.ai.openai.chat.temperature=0.7
